--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-jwt": "^5.3.3",
-    "express-validator": "^6.4.0",
+    "express-validator": "^5.3.1",
     "formidable": "^1.2.2",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.15",
     "mongoose": "^5.9.10",
+    "speakeasy": "^2.0.0",
     "uuid": "^7.0.3"
   },
   "devDependencies": {
