--- a/package.json
+++ b/package.json
@@ -38,5 +38,9 @@
   "devDependencies": {
     "concurrently": "^5.2.0",
     "nodemon": "^2.0.3"
-  }
+  },
+  "engines": {
+    "node": "10.16.0"
+  },
+  "proxy": "http://localhost:8000"
 }
